[package]
name = "predikit"
version = "0.1.0"
edition = "2021"
authors = ["Dave Parfitt"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
is_executable = "1.0.4"
which = "6.0.3"
async-std = "1.13.0"
tempfile = "3"
log = "0.4.22"
lazy_static = "1.5.0"
regex = "1.11.1"
colored = "2.1.0"
env_logger = "0.11.5"
port_scanner = "0.1.5"
ariadne = { version = "0.5.0", features = ["auto-color"] }
peginator = "0.7.0"

[build-dependencies]
peginator_codegen = "0.7"

# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
#[target.x86_64-unknown-linux-gnu]
#linker = "/usr/bin/clang-18"
#rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold"]

#[profile.dev]
#debug = 0
#strip = "debuginfo"
