[package]
name = "predikit"
version = "0.1.0"
edition = "2021"
authors = ["Dave Parfitt"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
async-std = "1.13.0"

log = "0.4.22"
regex = "1.11.1"
colored = "2.1.0"
env_logger = "0.11.5"
port_scanner = "0.1.5"
shellexpand = "3.1.0"
url = "2.5.4"
is_executable = "1.0.4"
which = "7.0.0"

codespan-reporting = "0.11.1"
handlebars = "6.2.0"
serde = "1.0.217"

lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
duration-str = "0.12.0"

tempfile = "3.14.0" # this is a test dep

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.22.0"

# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
#[target.x86_64-unknown-linux-gnu]
#linker = "/usr/bin/clang-18"
#rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold"]

#[profile.dev]
#debug = 0
#strip = "debuginfo"
